Fixes #18935: Double scrollbar in settings page when branding plugin is enabled

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
@@ -406,6 +406,9 @@
   height: calc(100vh - 50px);
   overflow: hidden;
 }
+#headerBar ~ .content-wrapper .rudder-template .one-col{
+  height: calc(100vh - 80px);
+}
 .rudder-template .one-col .main-header{
   border-bottom: 2px solid #e5e5e5;
 }
